--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "express": "4.17.1",
     "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "morgan": "1.10.0",
     "nanoid": "^4.0.2"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "eslint": "7.19.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "16.0.3",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15",
-    "dotenv": "^16.3.1"
+    "nodemon": "2.0.15"
   }
 }
