--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 DB_HOST=
 PORT=
+
 JWT_SECRET=
+
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+ELASTICEMAIL_FROM=
+ELASTICEMAIL_API_KEY=
