--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "bcrypt": "^5.1.1",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -21,7 +22,8 @@
     "mongoose": "^7.5.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^4.0.2"
+    "nanoid": "^4.0.2",
+    "nodemailer": "^6.9.6"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
